--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^8.0.1
+  http: ^0.13.4
+  flutter_spinkit: ^5.1.0
 
   cupertino_icons: ^0.1.2
 
